--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,26 @@
 body {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0%;
+  font-family: sans-serif;
+  background-image: url('https://wallpapercave.com/wp/wp3614084.jpg'), url('https://cdn.wallpapersafari.com/32/81/HrzQfA.jpg'),url('http://wallpapercave.com/wp/887OqPq.jpg');
+  background-size: cover;
+  background-position: center center;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1 {
+  background-color: rgba(254, 254, 254, 0.315);
+  padding: 30px;
+  backface-visibility: visible;
+  color: rgb(61, 25, 11);
+  border-radius: 20px;
+
+}
+
+div {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
